# tat

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: app.rs  dataset.rs  fixtures.rs  layer.rs  layerlist.rs  layerschema.rs  lib.rs  main.rs  navparagraph.rs  numberinput.rs  shared.rs  table.rs  tat.rs  types.rs  utils.rs
src/snapshots/: tat__app__test__back_to_main_menu.snap  tat__app__test__copied_to_clipboard.snap  tat__app__test__delete_in_jump_to_line.snap  tat__app__test__end_in_jump_to_line.snap  tat__app__test__enter_in_middle_in_jump_to_line.snap  tat__app__test__goto_last_feature.snap  tat__app__test__home_in_jump_to_line.snap  tat__app__test__open_jump_to_line.snap  tat__app__test__open_table_again.snap  tat__app__test__open_table_with_last_layer.snap  tat__app__test__render_main_menu-10.snap  tat__app__test__render_main_menu-13.snap  tat__app__test__render_main_menu-15.snap  tat__app__test__render_main_menu-17.snap  tat__app__test__render_main_menu-18.snap  tat__app__test__render_main_menu-2.snap  tat__app__test__render_main_menu-4.snap  tat__app__test__render_main_menu-5.snap  tat__app__test__render_main_menu-6.snap  tat__app__test__render_main_menu-7.snap  tat__app__test__render_main_menu-8.snap  tat__app__test__render_table-14.snap  tat__app__test__render_table-16.snap  tat__app__test__render_table-19.snap  tat__app__test__render_table-20.snap  (+35 more)
testdata/: basic.gpkg  basic.gpx  basic.jsonfg  basic.kml  basic.mapml  basic.mbtiles  basic.nd  basic.ods  basic.pcidsk  basic.sqlite  basic.vdv
tests/: drivers.rs
(+164 files in other folders)
