[package]
name = "tat"
version = "0.1.0"
edition = "2024"
authors = ["Juho Ervasti"]
license = "MIT"
description = "TUI for inspecting geospatial vector data"
readme = "README.md"
homepage = "https://github.com/JuhoErvasti/tat"
repository = "https://github.com/JuhoErvasti/tat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = "0.17.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
cli-log = "2.1.0"
cli-clipboard = "0.4.0"
unicode-segmentation = "1.12.0"
