[package]
name = "tat"
version = "0.1.0"
edition = "2024"
authors = ["Juho Ervasti"]
license = "MIT"
description = "Terminal UI for inspecting geospatial data"
readme = "README.md"
homepage = "https://github.com/JuhoErvasti/tat"
repository = "https://github.com/JuhoErvasti/tat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = "0.18.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
cli-log = "2.1.0"
cli-clipboard = "0.4.0"
unicode-segmentation = "1.12.0"
clap = { version = "4.5.41", features = ["derive"] }
